<resources>
    <string name="app_name">FDA-Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deliver">Deliver</string>
    <string name="location">Location</string>
    <string name="restaurant_list_title">Fastest Near Your</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="account">Don\'t Click This</string>
    <string name="add">Add</string>
    <string name="_16_00">$16.00</string>
    <string name="thick_handmade_udon_noodles_in_miso_broth_with_fresh_vegetables">Thick handmade udon noodles in miso broth with fresh vegetables.</string>
    <string name="udon_miso">Udon Miso</string>
    <string name="featured_items">Featured Items</string>
    <string name="back">Back</string>
    <string name="enter_number">Enter your mobile number</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="items">items</string>
</resources>